subprojects {
    apply plugin: "java"

    group "lol.pyr"
    version "2.0.0"

    compileJava {
        options.release.set(8)
    }

    repositories {
        mavenCentral()
        maven {
            url "https://hub.spigotmc.org/nexus/content/repositories/snapshots/"
        }
        maven {
            url "https://repo.codemc.io/repository/maven-snapshots/"
        }
        maven {
            url "https://libraries.minecraft.net"
        }
        maven {
            url "https://repo.papermc.io/repository/maven-public/"
        }
        maven {
            url "https://repo.extendedclip.com/content/repositories/placeholderapi/"
        }
        maven {
            url "https://repo.pyr.lol/releases"
        }
        maven {
            url "https://jitpack.io/"
        }
    }
}
